# is-skeletons-detector

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.alpine_opencv  Dockerfile.detector  Dockerfile.dev_gpu  Dockerfile.mjpeg_server  Dockerfile.render  README.md  build.sh  conanfile.py  get_models.sh  options.json  options.proto  options_pb2.py  pack.sh  publisher.py  render.py  render_viewer.py  requeriments.txt  request.py  rpc.py  setup.py  skeletons.proto  skeletons.py  skeletons_pb2.py  skeletons_utils.py  stream-multithread.py  stream.py  stream_channel.py
etc/conf/: options.json
etc/dataset/: download.sh
etc/docker/: Dockerfile  Dockerfile.dev_gpu  Dockerfile.devel  entrypoint  pack.sh
etc/utils/: publisher.py  requester.py
mjpeg-server/: LICENSE.txt  README.md  package-lock.json  package.json  server.js
mjpeg-server/schemas/: camera_pb.js  common_pb.js  image_pb.js  marker_pb.js  power_pb.js  robot_pb.js
src/conf/: gen_pb_py.sh  options.proto
src/is/conf/: CMakeLists.txt  options.proto
src/is/skeletons/: CMakeLists.txt  detector.cpp  detector.hpp  utils.cpp  utils.hpp
src/is/skeletons-detector-service/: CMakeLists.txt  rpc.cpp  service.cpp  stream.cpp
src/is_skeletons_detector/: __init__.py  options_pb2.py  rpc.py  service.py  skeletons.py  stream_channel.py  utils.py
